# TestMe-SI213116-Ex

./: pyproject.toml
TestMe-SI213116-Ex-main/: README.md
TestMe-SI213116-Ex-main/codetestdemo/: main.py  namecounter.py  similarityenum.py
TestMe-SI213116-Ex-main/data/: index.txt
TestMe-SI213116-Ex-main/data/TEST/: consecutive_special_characters.txt  special_characters.txt  special_characters_within_words.txt  wrong_spacings.txt
TestMe-SI213116-Ex-main/tests/: test_readfile.py
codetestdemo/: __init__.py  main.py  namecounter.py
data/: index.txt
data/TEST/: double_file.txt  multiple_occurrences.txt  single_file.txt  test_file.txt  wrong_spacings.txt
tests/: tempCodeRunnerFile.py  test_readfile.py
