[tool.poetry]
name = "codetestdemo"
version = "0.1.0"
description = ""
authors = ["hippocampa <tsdhrm@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
autopep8 = "^2.0.4"
jellyfish = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
